--- a/detail.html
+++ b/detail.html
@@ -11,35 +11,41 @@
 </head>
 
 <body>
-    <div class="container max-w-7xl mx-auto ">
-        <div class="bg-white md:flex justify-between items-center py-5 ">
+    <div class="container max-w-7xl mx-auto px-5">
+        <div class="bg-white md:flex justify-between items-center py-5">
             <div class="">
-                <img src="img/logo.png" alt="">
+                <img src="img/Logo.png" alt="" />
             </div>
-            <div class="mx-6 ">
-                <ul class="md:flex m-0 p-0 font-bold ">
-                    <li><a href="index.html" class="text-lg px-4 hover:text-red-500">Home</a></li>
-                    <li><a href="product.html" class=" text-lg px-4 hover:text-red-500">Products</a></li>
-                    <li><a href="detai.html" class="text-lg px-4 hover:text-red-500">About Us</a></li>
-                    <li><a href="" class="text-lg px-4 hover:text-red-500">Contact Us</a></li>
+            <div class="mx-6">
+                <ul class="md:flex m-0 p-0">
+                    <li><a href="" class="text-lg px-4 hover:text-red-500">Home</a></li>
+                    <li>
+                        <a href="index2.html" class="text-lg px-4 hover:text-red-500">Products</a>
+                    </li>
+                    <li>
+                        <a href="index3.html" class="text-lg px-4 hover:text-red-500">About Us</a>
+                    </li>
+                    <li>
+                        <a href="" class="text-lg px-4 hover:text-red-500">Contact Us</a>
+                    </li>
                 </ul>
             </div>
-            <div class="md:flex items-center">
+            <div class="flex items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                     stroke="currentColor" stroke-width="2">
                     <path stroke-linecap="round" stroke-linejoin="round"
                         d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
                 </svg>
-                <button
-                    class="border-2 rounded-md py-2 px-3 border-red-300 text-red-400  text-sm mx-4 hover:bg-black ">Sign
-                    In</button>
-                <button
-                    class="border-2 rounded-md py-2 px-3  border-red-400 bg-red-400 text-white  text-sm hover:bg-black ">Sign
-                    Up</button>
+                <button class="border-2 rounded-md py-2 px-3 border-red-300 text-red-400 text-sm mx-4">
+                    Sign In
+                </button>
+                <button class="border-2 rounded-md py-2 px-3 border-red-400 bg-red-400 text-white text-sm">
+                    Sign Up
+                </button>
             </div>
         </div>
 
-        <div class="bg-white grid grid-cols-2 md:justify-items-end py-3 gap-8 py-20 ">
+        <div class="bg-white grid grid-cols-1 md:grid-cols-2 md:justify-items-end py-3 gap-8 py-20 ">
             <div class="block pt-5   ">
                 <div class=" ">
                     <a href="" class="text-sm font-bold text-4xl ">Big and Juicy Wagyu Beef Cheeseburger</a>
@@ -73,7 +79,7 @@
         <h1 class="font-bold text-2xl py-4">Related Products</h1>
 
         <!-- -->
-        <div class="flex jutify-center items-center mt-1 py-10 ">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 jutify-between ">
 
             <div class="  ">
                 <div c><img src="img/img4.png" alt="" class="rounded-xl "></div>
@@ -91,7 +97,7 @@
                     cart</button>
             </div>
             <!-- -->
-            <div class="px-10">
+            <div class="">
                 <div><img src="img/img5.png" alt="" class="rounded-xl "> </div>
                 <div class="text-xl  mt-3">
                     <a href="">The Creamiest Creamy Chicken</a>
@@ -123,7 +129,7 @@
         </div>
 
 
-        <div class="flex justify-between my-5 border-t py-10">
+        <div class="md:flex justify-between my-5 border-t py-4">
             <div>
                 <img src="img/Fudo..png" alt="">
             </div>
