--- a/index.html
+++ b/index.html
@@ -2,26 +2,31 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
-
 </head>
 
 <body>
-    <div class="container max-w-7xl mx-auto ">
-        <div class="bg-white flex justify-between items-center py-5 ">
+    <div class="container max-w-7xl mx-auto px-5">
+        <div class="bg-white md:flex justify-between items-center py-5">
             <div class="">
-                <img src="img/logo.png" alt="">
+                <img src="img/Logo.png" alt="" />
             </div>
             <div class="mx-6">
-                <ul class="flex m-0 p-0 font-bold">
-                    <li><a href="index.html" class="text-lg px-4 hover:text-red-500">Home</a></li>
-                    <li><a href="product.html" class=" text-lg px-4 hover:text-red-500">Products</a></li>
-                    <li><a href="detai.html" class="text-lg px-4 hover:text-red-500">About Us</a></li>
-                    <li><a href="" class="text-lg px-4 hover:text-red-500">Contact Us</a></li>
+                <ul class="md:flex m-0 p-0">
+                    <li><a href="" class="text-lg px-4 hover:text-red-500">Home</a></li>
+                    <li>
+                        <a href="index2.html" class="text-lg px-4 hover:text-red-500">Products</a>
+                    </li>
+                    <li>
+                        <a href="index3.html" class="text-lg px-4 hover:text-red-500">About Us</a>
+                    </li>
+                    <li>
+                        <a href="" class="text-lg px-4 hover:text-red-500">Contact Us</a>
+                    </li>
                 </ul>
             </div>
             <div class="flex items-center">
@@ -30,48 +35,57 @@
                     <path stroke-linecap="round" stroke-linejoin="round"
                         d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
                 </svg>
-                <button class="border-2 rounded-md py-2 px-3 border-red-300 text-red-400  text-sm mx-4 hover:bg-black ">Sign In</button>
-                <button class="border-2 rounded-md py-2 px-3  border-red-400 bg-red-400 text-white  text-sm hover:bg-black ">Sign
-                    Up</button>
+                <button class="border-2 rounded-md py-2 px-3 border-red-300 text-red-400 text-sm mx-4">
+                    Sign In
+                </button>
+                <button class="border-2 rounded-md py-2 px-3 border-red-400 bg-red-400 text-white text-sm">
+                    Sign Up
+                </button>
             </div>
         </div>
-   
-        <div class="bg-white grid grid-cols-2 justify-items-end py-3 gap-8 ">           
-            <div class="block pt-5   ">
-                <div class="bg-red-100 rounded-sm py-1 px-3 inline border-1 ">
-                    <a href="" class="text-sm font-bold text-red-500">Quality Food</a>
-                </div>
-                <div class="pt-5">
-                    <h2 class="font-bold text-7xl ">Fastest <span class="text-red-600">Delivery</span> & Easy <span
-                            class="text-red-600">Pickup</span></h2>
-                    <p class="py-6 ">Best cooks and best delivery guys all at your service. Hot tasty food will reach
-                        you
-                        in 60 minutes.</p>
+
+        <div class="bg-white grid grid-cols-1 md:grid-cols-2 justify-items-end py-3 gap-8">
+            <div class="block pt-5">
+                <div class="border inline-block py-1 rounded-md bg-red-100 my-8">
+                    <a href="" class="font-bold text-lg text-red-500 px-3">Quality Food</a>
                 </div>
 
-                <div class=" border rounded-xl  flex  ">
+                <h2 class="font-bold text-5xl md:text-7xl">
+                    Fastest <span class="text-red-600">Delivery</span><br class="md:hidden" />
+                    & <br class="md:hidden" />
+                    Easy <span class="text-red-600">Pickup</span>
+                </h2>
+                <p class="py-6">
+                    Best cooks and best delivery guys all at your service. Hot tasty
+                    food will reach you in 60 minutes.
+                </p>
+
+                <form action="" class="border rounded-xl flex">
                     <input type="text" placeholder="Enter your delivery location"
-                        class="text-2xl py-5 px-3 border outline-none rounded-l-xl border-red-600 text-xs w-full">
-                    <button type="submit"
-                        class=" bg-red-600 px-10 rounded-r-xl boder-none text-white cusor-pointer">Discover</button>
-                </div>
+                        class="text-2xl py-5 px-3 border outline-none rounded-l-xl border-red-600 text-xs w-full" />
+                    <button type="submit" class="bg-red-600 px-10 rounded-r-xl boder-none text-white cusor-pointer">
+                        Discover
+                    </button>
+                </form>
             </div>
-<!-- banne -->
+
             <div class="">
-                <img src="img/newbanner.jpg" alt="" class=" max-w-sm ">
+                <img src="img/newbanner.jpg" alt="" class="md:max-w-sm" />
             </div>
         </div>
 
-        <div class="grid grid-cols-1 justify-items-center  mt-8">
-            <h2 class="font-bold text-4xl">Our Popular Dishes</h2>
-            <p class="flex w-8/12 text-center mt-5">Lorem ipsum dolor sit amet, consectetuipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqut enim ad minim </p>
+        <div class="text-center mt-8">
+            <h2 class="font-bold text-2xl md:text-4xl">Our Popular Dishes</h2>
+            <p class="md:w-8/12 mt-5 mx-auto">
+                Lorem ipsum dolor sit amet, consectetuipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqut enim ad minim
+            </p>
         </div>
-        <div class="grid grid-cols-3 justify-between gap-8 mt-8">
-            <div class="border-none m-0 p-0">
+        <div class="grid grid-cols-1 md:grid-cols-3 md:gap-8 mt-8">
+            <div class="cursor-pointer transition group">
                 <div><img src="img/img4.png" alt="" class="rounded"></div>
-                <div class="text-xl text-red-500 mt-3">
-                    <a href="">Fresh and Healthy Mixed </a>
+                <div class="text-lg text-red-500 mt-3 group-hover:text-blue-500">
+                    <a href="">Big and Juicy Wagyu Beef Cheeseburger</a>
                 </div>
                 <div class="flex jutify-center items-center mt-1 ">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
@@ -84,10 +98,11 @@
                     <p class="px-3">Snack</p>
                 </div>
             </div>
-             <!--  -->
-             <div class="border-none m-0 p-0">
-                <div><img src="img/img2.png" alt="" class="rounded"></div>
-                <div class="text-xl text-red-500 mt-3">
+            <!-- -->
+
+            <div class="cursor-pointer transition group">
+                <div><img src="img/img3.png" alt="" class="rounded"></div>
+                <div class="text-lg text-red-500 mt-3 group-hover:text-blue-500">
                     <a href="">Fresh Lime Roasted Salmon</a>
                 </div>
                 <div class="flex jutify-center items-center mt-1 ">
@@ -101,28 +116,12 @@
                     <p class="px-3">Snack</p>
                 </div>
             </div>
-             <!-- -->
-             <div class="border-none m-0 p-0">
-                <div><img src="img/img3.png" alt="" class="rounded"></div>
-                <div class="text-xl text-red-500 mt-3">
-                    <a href="">The Best Easy One Chicken and Rice</a>
-                </div>
-                <div class="flex jutify-center items-center mt-1 ">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                        <path fill-rule="evenodd"
-                            d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z"
-                            clip-rule="evenodd" />
-                    </svg>
-                    <p class="px-3">30 Minutes</p>
-                    <img src="img/daodao.jpg" alt="" class="h-5 w-5">
-                    <p class="px-3">Snack</p>
-                </div>
-            </div>
-             <!-- -->
-             <div class="border-none m-0 p-0">
+            <!--  -->
+
+            <div class="cursor-pointer transition group">
                 <div><img src="img/image 26-to.png" alt="" class="rounded"></div>
-                <div class="text-xl text-red-500 mt-3">
-                    <a href="">The Creamiest Creamy Chicken</a>
+                <div class="text-lg text-red-500 mt-3 group-hover:text-blue-500">
+                    <a href="">The Best Easy One Pot Chicken and Rice</a>
                 </div>
                 <div class="flex jutify-center items-center mt-1 ">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
@@ -135,10 +134,25 @@
                     <p class="px-3">Snack</p>
                 </div>
             </div>
-             <!-- -->
-             <div class="border-none m-0 p-0">
+            <!--  -->
+
+            <div class="cursor-pointer transition group">
+                <div><img src="img/image 26-to.png" alt="" class="rounded"></div>
+                <div class="text-lg text-red-500 mt-3 group-hover:text-blue-500">
+                    <a href="">Fresh and Healthy Mixed Mayonnaise </a>
+                </div>
+                <div class="mt-2 space-x-2">
+                    <img src="images/Timer.png" alt="" class="inline-block h-5 w-5" />
+                    <span class="pr-7">30 Minutes</span>
+                    <img src="images/ForkKnife.png" alt="" class="inline-block h-5 w-5" />
+                    <span class="">Snack</span>
+                </div>
+            </div>
+            <!--  -->
+
+            <div class="cursor-pointer transition group">
                 <div><img src="img/img5.png" alt="" class="rounded"></div>
-                <div class="text-xl text-red-500 mt-3">
+                <div class="text-lg text-red-500 mt-3 group-hover:text-blue-500">
                     <a href="">The Creamiest Creamy Chicken</a>
                 </div>
                 <div class="flex jutify-center items-center mt-1 ">
@@ -152,11 +166,12 @@
                     <p class="px-3">Snack</p>
                 </div>
             </div>
-             <!-- -->
-             <div class="border-none m-0 p-0">
+            <!-- -->
+
+            <div class="cursor-pointer transition group">
                 <div><img src="img/img6.png" alt="" class="rounded"></div>
-                <div class="text-xl text-red-500 mt-3">
-                    <a href="">Fruity Pancake Orange & Blueberry</a>
+                <div class="text-lg text-red-500 mt-3 group-hover:text-blue-500">
+                    <a href="">Fruity Pancake with Orange & Blueberry</a>
                 </div>
                 <div class="flex jutify-center items-center mt-1 ">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
@@ -169,47 +184,50 @@
                     <p class="px-3">Snack</p>
                 </div>
             </div>
-             <!-- -->
+            <!-- end -->
         </div>
-        <div class="grid grid-cols-1 jutify-items-start">
-            <div class="flex justify-between py-20">
+
+        <div class="">
+            <div class="md:flex justify-between py-20">
                 <div class="">
                     <h2 class="text-5xl font-bold">Categories</h2>
                 </div>
-                <div class="border border-red-400 rounded ">
-                    <button class="px-4 py-2 font-bold text-red-500">View All Categories</button>
+                <div class="border border-red-400 rounded md:m-0 mt-10 inline-block cursor-pointer">
+                    <button class="px-4 py-2 font-bold text-red-500">
+                        View All Categories
+                    </button>
                 </div>
             </div>
-           
-            <div class="grid grid-cols-6 justify-between gap-4 ml-2">
-                <div>
-                    <img src="img/chocolate.jpg" alt="">
-                    <p class="font-bold hover:text-red-500">Chocolate</p>
+
+            <div class="grid grid-cols-2 md:grid-cols-3 xl:grid-cols-6 gap-4 ml-2">
+                <div class="text-center cursor-pointer hover:text-red-400">
+                    <img src="img/chocolate.jpg" alt="" class="mx-auto">
+                    <p class="font-bold ">Chocolate</p>
                 </div>
 
-                <div>
-                    <img src="img/com-nam.jpg" alt="">
+                <div class="text-center cursor-pointer hover:text-red-400">
+                    <img src="img/com-nam.jpg" alt="" class="mx-auto">
                     <p class="font-bold hover:text-red-500">Breakfast</p>
                 </div>
 
-                <div>
-                    <img src="img/rau.jpg" alt="">
+                <div class="text-center cursor-pointer hover:text-red-400">
+                    <img src="img/rau.jpg" alt="" class="mx-auto">
                     <p class="font-bold hover:text-red-500">Vegan</p>
                 </div>
 
-                <div>
-                    <img src="img/sand-wich.jpg" alt="">
+                <div class="text-center cursor-pointer hover:text-red-400">
+                    <img src="img/sand-wich.jpg" alt="" class="mx-auto">
                     <p class="font-bold hover:text-red-500">sanwick</p>
                 </div>
 
-                <div>
-                    <img src="img/thit.jpg" alt="">
+                <div class="text-center cursor-pointer hover:text-red-400">
+                    <img src="img/thit.jpg" alt="" class="mx-auto" >
                     <p class="font-bold hover:text-red-500">Meat</p>
                 </div>
 
-                <div>
-                    <img src="img/banh-kem.jpg" alt="">
-                    <p class="font-bold hover:text-red-500">Dessert</p>
+                <div class="text-center cursor-pointer hover:text-red-400">
+                    <img src="img/banh-kem.jpg" alt="" class="mx-auto">
+                    <p class="font-bold hover:text-red-500 ">Dessert</p>
                 </div>
             </div>
         </div>
@@ -217,62 +235,74 @@
             <div class="text-center py-20">
                 <h2 class="text-4xl font-bold">Contact us</h2>
             </div>
-            <div class="grid grid-cols-12 gap-8">
-                <div class="grid col-span-6">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="">
                     <div>
                         <label for="name" class="block uppercase">NAME</label>
-                        <input type="text" id="name" placeholder="Enter your name..." class="border mt-3 p-2 rounded block w-full">
+                        <input type="text" id="name" placeholder="Enter your name..."
+                            class="border mt-3 p-2 rounded block w-full" />
                     </div>
                 </div>
 
-                <div class="grid col-span-6">
+                <div class="">
                     <div>
                         <label for="" class="block uppercase">EMAIL ADDRESS</label>
-                        <input type="text" placeholder="Your email address..." class="border mt-3 p-2 rounded block w-full">
+                        <input type="text" placeholder="Your email address..."
+                            class="border mt-3 p-2 rounded block w-full" />
                     </div>
                 </div>
 
-                <div class="grid col-span-6">
+                <div class="">
                     <div>
                         <label for="" class="block uppercase">Subject</label>
-                        <input type="text" placeholder="Enter subject..." class="border mt-3 p-2 rounded  block w-full">
+                        <input type="text" placeholder="Enter subject..."
+                            class="border mt-3 p-2 rounded block w-full" />
                     </div>
                 </div>
 
-                <div class="grid col-span-6">
+                <div class="">
                     <div>
                         <label for="" class="block uppercase">ENQUITY TYPE</label>
-                        <select name="" id="" class="w-full border mt-3 p-2 rounded  block">
+                        <select name="" id="" class="w-full border mt-3 p-2 rounded block">
                             <option value="">Advertising</option>
                         </select>
                     </div>
                 </div>
 
-                <div class="grid col-span-12">
+                <div class="md:col-span-2">
                     <div>
                         <label for="" class="block uppercase">MEssages</label>
-                       <textarea name="" id="" cols="10" rows="5" placeholder="Enter your messages..." class="border mt-3 p-2 rounded  block w-full"></textarea>                   
+                        <textarea name="" id="" cols="10" rows="5" placeholder="Enter your messages..."
+                            class="border mt-3 p-2 rounded block w-full"></textarea>
                     </div>
                 </div>
-
-
             </div>
         </div>
 
-        <div class="text-center py-10 ">
-            <button type="submit" class="border rounded-xl bg-black text-white text-md px-6 py-3 hover:text-red-500">Submit</button>
+        <div class="text-center py-10">
+            <button type="submit" class="border rounded-xl bg-black text-white text-md px-6 py-3">
+                Submit
+            </button>
         </div>
 
-        <div class="flex justify-between my-5 border-t py-4">
+        <div class="md:flex justify-between my-5 border-t py-4">
             <div>
-                <img src="img/Fudo..png" alt="">
+                <img src="images/Logo.png" alt="" />
             </div>
             <div class="">
                 <ul class="flex m-0 p-0">
-                    <li><a href="" class="font-bold px-4 hover:text-red-500">Home</a></li>
-                    <li><a href="" class="font-bold px-4 hover:text-red-500">Products</a></li>
-                    <li><a href="" class="font-bold px-4 hover:text-red-500">About Us</a></li>
-                    <li><a href="" class="font-bold px-4 hover:text-red-500">Contact Us</a></li>
+                    <li>
+                        <a href="" class="font-normal px-4 hover:text-red-500">Home</a>
+                    </li>
+                    <li>
+                        <a href="" class="font-normal px-4 hover:text-red-500">Products</a>
+                    </li>
+                    <li>
+                        <a href="" class="font-normal px-4 hover:text-red-500">About Us</a>
+                    </li>
+                    <li>
+                        <a href="" class="font-normal px-4 hover:text-red-500">Contact Us</a>
+                    </li>
                 </ul>
             </div>
         </div>
