--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             </div>
             <div class="mx-6">
                 <ul class="md:flex m-0 p-0">
-                    <li><a href="" class="text-lg px-4 hover:text-red-500">Home</a></li>
+                    <li><a href="" class="text-lg px-4 hover:text-red-500 font-bold">Home</a></li>
                     <li>
-                        <a href="index2.html" class="text-lg px-4 hover:text-red-500">Products</a>
+                        <a href="index2.html" class="text-lg px-4 hover:text-red-500 font-bold">Products</a>
                     </li>
                     <li>
-                        <a href="index3.html" class="text-lg px-4 hover:text-red-500">About Us</a>
+                        <a href="index3.html" class="text-lg px-4 hover:text-red-500 font-bold">About Us</a>
                     </li>
                     <li>
                         <a href="" class="text-lg px-4 hover:text-red-500">Contact Us</a>
