--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a href="index3.html" class="text-lg px-4 hover:text-red-500 font-bold">About Us</a>
                     </li>
                     <li>
-                        <a href="" class="text-lg px-4 hover:text-red-500">Contact Us</a>
+                        <a href="" class="text-lg px-4 hover:text-red-500 font-bold">Contact Us</a>
                     </li>
                 </ul>
             </div>
