--- a/detail.html
+++ b/detail.html
@@ -18,15 +18,15 @@
             </div>
             <div class="mx-6">
                 <ul class="md:flex m-0 p-0">
-                    <li><a href="" class="text-lg px-4 hover:text-red-500 font-bold">Home</a></li>
+                    <li><a href="index.html" class="text-lg px-4 hover:text-red-500 font-bold">Home</a></li>
                     <li>
-                        <a href="index2.html" class="text-lg px-4 hover:text-red-500 font-bold">Products</a>
+                        <a href="product.html" class="text-lg px-4 hover:text-red-500 font-bold">Products</a>
                     </li>
                     <li>
-                        <a href="index3.html" class="text-lg px-4 hover:text-red-500 font-bold">About Us</a>
+                        <a href="detail.html" class="text-lg px-4 hover:text-red-500 font-bold">About Us</a>
                     </li>
                     <li>
-                        <a href="" class="text-lg px-4 hover:text-red-500">Contact Us</a>
+                        <a href="" class="text-lg px-4 hover:text-red-500 font-bold">Contact Us</a>
                     </li>
                 </ul>
             </div>
