--- a/index.html
+++ b/index.html
@@ -141,11 +141,15 @@
                 <div class="text-lg text-red-500 mt-3 group-hover:text-blue-500">
                     <a href="">Fresh and Healthy Mixed Mayonnaise </a>
                 </div>
-                <div class="mt-2 space-x-2">
-                    <img src="images/Timer.png" alt="" class="inline-block h-5 w-5" />
-                    <span class="pr-7">30 Minutes</span>
-                    <img src="images/ForkKnife.png" alt="" class="inline-block h-5 w-5" />
-                    <span class="">Snack</span>
+                <div class="flex jutify-center items-center mt-1 ">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd"
+                            d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z"
+                            clip-rule="evenodd" />
+                    </svg>
+                    <p class="px-3">30 Minutes</p>
+                    <img src="img/daodao.jpg" alt="" class="h-5 w-5">
+                    <p class="px-3">Snack</p>
                 </div>
             </div>
             <!--  -->
