--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
             <div class="cursor-pointer transition group">
                 <div><img src="img/image 26-to.png" alt="" class="rounded"></div>
-                <div class="text-lg text-red-500 mt-3 group-hover:text-blue-500">
+                <div class="text-lg text-red-500 mt-3 group-hover:text-red-500">
                     <a href="">The Best Easy One Pot Chicken and Rice</a>
                 </div>
                 <div class="flex jutify-center items-center mt-1 ">
@@ -138,7 +138,7 @@
 
             <div class="cursor-pointer transition group">
                 <div><img src="img/image 26-to.png" alt="" class="rounded"></div>
-                <div class="text-lg text-red-500 mt-3 group-hover:text-blue-500">
+                <div class="text-lg text-red-500 mt-3 group-hover:text-red-500">
                     <a href="">Fresh and Healthy Mixed Mayonnaise </a>
                 </div>
                 <div class="flex jutify-center items-center mt-1 ">
@@ -156,7 +156,7 @@
 
             <div class="cursor-pointer transition group">
                 <div><img src="img/img5.png" alt="" class="rounded"></div>
-                <div class="text-lg text-red-500 mt-3 group-hover:text-blue-500">
+                <div class="text-lg text-red-500 mt-3 group-hover:text-red-500">
                     <a href="">The Creamiest Creamy Chicken</a>
                 </div>
                 <div class="flex jutify-center items-center mt-1 ">
@@ -174,7 +174,7 @@
 
             <div class="cursor-pointer transition group">
                 <div><img src="img/img6.png" alt="" class="rounded"></div>
-                <div class="text-lg text-red-500 mt-3 group-hover:text-blue-500">
+                <div class="text-lg text-red-500 mt-3 group-hover:text-red-500">
                     <a href="">Fruity Pancake with Orange & Blueberry</a>
                 </div>
                 <div class="flex jutify-center items-center mt-1 ">
