--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="grid grid-cols-1 md:grid-cols-3 md:gap-8 mt-8">
             <div class="cursor-pointer transition group">
                 <div><img src="img/img4.png" alt="" class="rounded"></div>
-                <div class="text-lg text-red-500 mt-3 group-hover:text-blue-500">
+                <div class="text-lg text-red-500 mt-3 group-hover:text-red-500">
                     <a href="">Big and Juicy Wagyu Beef Cheeseburger</a>
                 </div>
                 <div class="flex jutify-center items-center mt-1 ">
@@ -102,7 +102,7 @@
 
             <div class="cursor-pointer transition group">
                 <div><img src="img/img3.png" alt="" class="rounded"></div>
-                <div class="text-lg text-red-500 mt-3 group-hover:text-blue-500">
+                <div class="text-lg text-red-500 mt-3 group-hover:text-red-500">
                     <a href="">Fresh Lime Roasted Salmon</a>
                 </div>
                 <div class="flex jutify-center items-center mt-1 ">
